posts/k8s-at-scale/kong-invalid-config/kong-invalid.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/methods: GET
    kubernetes.io/ingress.class: kong
  name: nginx-sample-2
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-sample-2
            port:
              number: 80
        path: /sample/2
        pathType: ImplementationSpecific
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    ingress.kubernetes.io/service-upstream: 'true'
    konghq.com/override: kong-timeout-limits
    konghq.com/plugins: basic-auth,nginx-sample-1 #,nginx-sample-1-rate removing this breaks Kong but it does not validate on webhook
  name: nginx-sample-1
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-sample-1
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    ingress.kubernetes.io/service-upstream: 'true'
    konghq.com/override: kong-timeout-limits
    konghq.com/plugins: basic-auth,nginx-sample-2 #,nginx-sample-2-rate removing this breaks Kong but it does not validate on webhook
  name: nginx-sample-2
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-sample-2
